<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sparks.csit.lab2app1.MagnoliaActivity"
    android:background="#4169E1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/magnoliaActivityTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/textViewMagnoliaTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:contentDescription="@string/magnoliaActivityTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/magnoliaStreet"
        android:textSize="20sp"
        android:id="@+id/textViewMagnoliaStreet"
        android:layout_below="@+id/textViewMagnoliaTitle"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/magnoliaStreet"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/magnoliaCityStateZip"
        android:textSize="20sp"
        android:id="@+id/textViewMagnoliaCityStateZip"
        android:layout_below="@+id/textViewMagnoliaStreet"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/magnoliaCityStateZip" />

</RelativeLayout>
