<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sparks.csit.lab2app1.StrawberryActivity"
    android:background="#4169E1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strawberryActivityTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/textViewStrawberryActivityTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:contentDescription="@string/strawberryActivityTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/strawberryStreet"
        android:textSize="20sp"
        android:id="@+id/textViewStrawberryStreet"
        android:layout_below="@+id/textViewStrawberryActivityTitle"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/strawberryStreet"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/strawberryCityStateZip"
        android:textSize="20sp"
        android:id="@+id/textViewStrawberryCityStateZip"
        android:layout_below="@+id/textViewStrawberryStreet"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/strawberryCityStateZip" />

</RelativeLayout>
